syntax = "proto3";

package greet ;

option go_package = "github.com/inabinash/grpc/greet/proto" ;

service Greet {
    rpc SayHello (GreetRequest) returns (GreetResponse) {} ;
    rpc GreetManyTimes (GreetRequest) returns ( stream GreetResponse) {} ;
}

message GreetRequest {
    string firstName = 1;
}

message GreetResponse {
    string result =1;
}
